--- a/assignment.html
+++ b/assignment.html
@@ -277,7 +277,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     
-   <section class ="vh-100" style="background-color: "#eee">
+   <section class ="vh-100" style="background-color:#eee">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
